tests/error/recursive_class_def.gw
#! [contains] recursive
class C {}
class D extends C {}
class E extends F {}
class F extends E {}
class G extends C {}

var C c;
var D d;
var E e;
var F f;
var G g;
<<< f $ D >>>;
<<<  [ f, g ]  >>>;
<<< maybe ? f : D >>>;
<<< c, " ", d, " ", e, " ", g >>>;
